--- a/drone-flight-dashboard/package.json
+++ b/drone-flight-dashboard/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "leaflet": "^1.9.4",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-echarts": "^8.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
