--- a/drone-flight-dashboard/package.json
+++ b/drone-flight-dashboard/package.json
@@ -12,8 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@maplibre/maplibre-gl-leaflet": "^0.1.3",
     "axios": "^1.12.2",
     "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.7.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
