--- a/drone-flight-dashboard/package.json
+++ b/drone-flight-dashboard/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@maplibre/maplibre-gl-leaflet": "^0.1.3",
     "axios": "^1.12.2",
+    "jspdf": "^3.0.3",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^5.7.3",
     "vue": "^3.5.18",
