--- a/drone-flight-dashboard/package.json
+++ b/drone-flight-dashboard/package.json
@@ -12,8 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "leaflet": "^1.9.4",
     "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2",
     "vue-echarts": "^8.0.0"
   },
   "devDependencies": {
